tests/integration/errors/empty_tuple.rsg
// TEST: compile_error
// EXPECT-ERROR: empty tuple '()' is not allowed; use 'unit'

fn main() {
    x := ()
}
